# libjpeg-turbo

./: Android.mk  Makefile.am  Makefile.in  config.h  config.h.in  configure  configure.ac  djpeg.c  jccolor.c  jchuff.c  jdapistd.c  jdcoefct.c  jdcolor.c  jddctmgr.c  jdhuff.c  jdhuff.h  jdinput.c  jdmarker.c  jdmaster.c  jdmerge.c  jdphuff.c  jdtrans.c  jmem-ashmem.c  jmemsys.h  jmorecfg.h  jpegint.h  jpeglib.h  turbojpegl.c
debian/: changelog  control  libjpeg-turbo-progs.install  libjpeg-turbo62.install  libjpeg-turbo62.postrm  libjpeg-turbo62.preinst  rules
debian/patches/: 001-fix-SIMD-detect.patch  series
simd/: Makefile.am  Makefile.in  jdcolor-armv7.s  jdidct-armv7.s  jsimd_arm_neon.c
